stderr
JudgeMan.java:23: error: illegal start of type
        for(int i = 1; i < hand.length; i++){
        ^
JudgeMan.java:23: error: > or ',' expected
        for(int i = 1; i < hand.length; i++){
                                      ^
JudgeMan.java:23: error: <identifier> expected
        for(int i = 1; i < hand.length; i++){
                                         ^
JudgeMan.java:30: error: illegal start of type
        if(flushCounter == 4){
        ^
JudgeMan.java:30: error: <identifier> expected
        if(flushCounter == 4){
                       ^
JudgeMan.java:35: error: illegal start of type
        for(int i = 1; i < intArray.length; i++){
        ^
JudgeMan.java:35: error: > or ',' expected
        for(int i = 1; i < intArray.length; i++){
                                          ^
JudgeMan.java:35: error: <identifier> expected
        for(int i = 1; i < intArray.length; i++){
                                             ^
JudgeMan.java:40: error: illegal start of type
        if(straightCounter == 4){
        ^
JudgeMan.java:40: error: <identifier> expected
        if(straightCounter == 4){
                          ^
JudgeMan.java:44: error: illegal start of type
        for(int i = 0; i < 3; i++){
        ^
JudgeMan.java:44: error: illegal start of type
        for(int i = 0; i < 3; i++){
                           ^
JudgeMan.java:44: error: <identifier> expected
        for(int i = 0; i < 3; i++){
                               ^
JudgeMan.java:62: error: <identifier> expected
        }
         ^
JudgeMan.java:66: error: unnamed classes are a preview feature and are disabled by default.
    private static int pairJudge(int[] intArray){
                   ^
  (use --enable-preview to enable unnamed classes)
JudgeMan.java:116: error: class, interface, enum, or record expected
}
^
16 errors
